[package]
name = "pythontest"
version = "0.1.0"
edition = "2018"

[lib]
name = "azul"
edition = "2018"
crate-type = ["cdylib"]
doc = false

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
overflow-checks = false
incremental = false

[dependencies]
pyo3 = { version = "0.13.2", default-features = false, features = ["extension-module", "macros"] }